# libcfgparse

./: .gitignore  Makefile.am  README.md  argparse.h  cfgparse_arg.c  cfgparse_arg.h  cfgparse_file.c  cfgparse_file.h  cfgparse_util.c  cfgparse_util.h  cfgparselib.h  configparse.c  configparse.h  configure.ac  fileparse.h  intest.txt  test_parse.c
